--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -4,7 +4,7 @@
   position: fixed;
   bottom: 0;
   height: 50px;
-  width: 97%;
+  width: 98%;
   background-color: #282828;
   padding: 20px;
 }
@@ -58,6 +58,7 @@
   align-items: center;
   color: white;
   flex: 0.3;
+  padding-right: 30px;
 }
 
 .footer__right * .MuiSlider-root {
